# claude-ds-tutorial

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json  settings.json
.claude/agents/: business-analyst.md  data-engineer.md  ml-engineer.md  qa-reviewer.md
.claude/commands/: data-quality.md  eda.md  feature-importance.md  model-report.md
.claude/hooks/: lint-notebook.sh  validate-data-load.sh
.claude/skills/crisp-dm-guide/: SKILL.md
.claude/skills/data-validation/: SKILL.md
.claude/skills/retail-domain/: SKILL.md
docs/: project-charter.md  project_charter.md
src/: __init__.py
src/data/: load.py  validate.py
src/features/: build_features.py
src/models/: predict.py  train.py
src/visualization/: plots.py
tests/: test_data_validation.py  test_features.py  test_model.py
tutorial/: 00-getting-started.md  01-business-understanding.md  02-data-understanding.md  03-data-preparation.md  04-modeling.md  05-evaluation.md  06-deployment.md  07-personalization.md  08-advanced-patterns.md
